Prevent Community header link misaligning before profile button rolled out

--- a/assets/sass/patterns/molecules/site-header-nav-bar-secondary.scss
+++ b/assets/sass/patterns/molecules/site-header-nav-bar-secondary.scss
@@ -29,7 +29,8 @@
   text-transform: uppercase;
 }
 
-.nav-secondary__item:nth-last-child(2) {
+// :not(.nav-secondary__item:nth-child(3)) stops the community misaligning before profiles launches
+.nav-secondary__item:nth-last-child(2):not(.nav-secondary__item:nth-child(3)) {
   @include visuallyhidden();
 
   @media only all and (min-width: #{get-rem-from-px($bkpt-site--medium)}em) {
